feat: 新增 需驗證登入的上傳圖片 api
1. 新增 uploadUserImage 方法
2. 新增 /userImage 使用 uploadUserImage
3. 增加 swagger 註解
